# python_piscine

./: folders.sh
0_starting/ex00/: Hello.py
0_starting/ex01/: format_ft_time.py
0_starting/ex02/: find_ft_type.py
0_starting/ex03/: NULL_not_found.py
0_starting/ex04/: whatis.py
0_starting/ex05/: building.py
0_starting/ex06/: filterstring.py  ft_filter.py  tester.py
0_starting/ex07/: sos.py
0_starting/ex08/: Loading.py  tester.py
0_starting/ex09/: README.md  pyproject.toml  tester.py
0_starting/ex09/ft_package/: __init__.py  list_utils.py
1_array/ex00/: give_bmi.py
1_array/ex01/: array2D.py  tester.py
1_array/ex02/: tester.py
1_array/ex03/: zoom.py
1_array/ex04/: rotate.py
1_array/ex05/: load_image.py  pimp_image.py  tester.py
2_datatable/ex00/: tester.py
2_datatable/ex01/: aff_life.py
2_datatable/ex02/: aff_pop.py  load_csv.py
2_datatable/ex03/: projection_life.py
3_oop/ex00/: S1E9.py  tester.py
3_oop/ex01/: S1E7.py  S1E9.py  tester.py
3_oop/ex02/: DiamondTrap.py  S1E7.py
3_oop/ex03/: ft_calculator.py
3_oop/ex04/: ft_calculator.py  tester.py
4_dod/ex00/: statistics.py
4_dod/ex01/: in_out.py
4_dod/ex02/: callLimit.py
4_dod/ex03/: new_student.py  tester.py
